maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: not found: value YBaggle
  y = YBaggle;
      ^JediEscaper:39: error: not found: value aMurSud
    if ( !aMurSud(x,y) ){
          ^JediEscaper:43: error: not found: value aMurEst
    if ( !aMurEst(x,y) ){
          ^