maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
var i:Int = 0;
var xBaggle:Int = 0;
var yBaggle:Int = 0;
var x:Int = 0;
var y:Int = 0;
var c:Int = getMondeLargeur()*getMondeHauteur();

override def run() {
  marquerBaggle();
  marquer();
}

def marquerBaggle() {
  while ( aBiscuit(xBaggle,yBaggle) ){
    xBaggle += 1;
    if ( xBaggle == getMondeLargeur() ){
      xBaggle = 0;
      yBaggle += 1;
    }
  }
  setIndication(xBaggle,yBaggle,i);
  i += 1;
  c -= 1;
  x = xBaggle;
  y = YBaggle;
}

def marquer() {
  if ( c != 0 ){
    if ( !aMurNord(x,y) ){
      setIndication(x,y-1,i);
      c-=1;
    }
    if ( !aMurOuest(x,y) ){
      setIndication(x-1,y,i);
      c-=1;
    }
    if ( !aMurSud(x,y) ){
      setIndication(x,y+1,i);
      c-=1;
    }
    if ( !aMurEst(x,y) ){
      setIndication(x+1,y,i);
      c-=1;
    }
    i+=1;
    
  }
}